[gd_scene load_steps=3 format=3 uid="uid://thtjuhs0ipk8"]

[ext_resource type="Script" uid="uid://deq27ctbeiesq" path="res://Main Menu/main_menu.gd" id="1_vccqd"]

[sub_resource type="LabelSettings" id="LabelSettings_pqn6e"]
font_size = 70
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_vccqd")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 51.0
offset_top = 71.0
offset_right = 1108.0
offset_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CritBash"
label_settings = SubResource("LabelSettings_pqn6e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="SettingMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/SettingMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer/SettingMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingMenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Volume"

[node name="MainVolume" type="HSlider" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingMenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer2"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingMenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer3"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
max_value = 1.0
step = 0.001

[node name="CreditsMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CreditsMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 30
text = "Game Made By:

Person 1
Person 2
Person 3
Person 4
Person 5"
fit_content = true
horizontal_alignment = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -5
offset_left = -64.0
offset_top = -51.0
offset_right = 1201.0
offset_bottom = 692.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingMenu/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SettingMenu/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer/MainVolume" to="." method="_on_main_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer2/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SettingMenu/HBoxContainer3/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsMenu/Back" to="." method="_on_back_pressed"]
